--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,23 +1,18 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Header and Footer Example</title>
-</head>
-<body style="margin: 0; padding: 0; position: relative; min-height: 100vh; display: flex; flex-direction: column; justify-content: space-between;">
-
-  <header style="background-color: #FF0000; height: 70px; width: 100%; display: flex; align-items: center; justify-content: center; color: white;">
-    Header Content
-  </header>
-
-  <main style="flex: 1;">
-
-    <!-- The main content will go here -->
-
-  </main>
-
-  <footer style="background-color: #00FF00; height: 60px; width: 100%; position: absolute; bottom: 0; display: flex; align-items: center; justify-content: center; color: white;">
-    Best School
-  </footer>
-
+<html lang="en">
+    <meta charset="utf-8">
+    <title>AirBnB Clone</title>
+    <body style="margin: 0; padding: 0;">
+        <header style="background-color: #FF0000; height: 70px; width: 100px;">
+        </header>
+        <footer style="background-color: green;
+                height: 60px;
+                width: 100px;
+                position: relative;
+                display: flex;
+                justify-content: center;
+                bottom: 0;">
+        best school
+    </footer>
 </body>
 </html>
