adding some images to my images directory

--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -12,7 +12,7 @@
                 display: flex;
                 justify-content: center;
                 bottom: 0;">
-        best school
+        Best School
     </footer>
 </body>
 </html>
