--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -8,7 +8,7 @@
         <footer style="background-color: green;
                 height: 60px;
                 width: 100px;
-                position: relative;
+                position: absolute;
                 display: flex;
                 justify-content: center;
                 bottom: 0;">
